{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 82,
  "lineage": "77c013eb-d501-4d18-efed-a2fec9c6771d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:internet-gateway/igw-0fb71984d12567b82",
            "id": "igw-0fb71984d12567b82",
            "owner_id": "339712741355",
            "tags": {
              "Name": "Demo"
            },
            "tags_all": {
              "Name": "Demo"
            },
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "dependencies": [
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:route-table/rtb-02edbf94d3d83eff0",
            "id": "rtb-02edbf94d3d83eff0",
            "owner_id": "339712741355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb71984d12567b82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb"
            },
            "tags_all": {
              "Name": "rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061f8e34da959129b",
            "route_table_id": "rtb-02edbf94d3d83eff0",
            "subnet_id": "subnet-0304f15ab82427b01"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.sub1",
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4356fedb3f19f4",
            "route_table_id": "rtb-02edbf94d3d83eff0",
            "subnet_id": "subnet-07a512c50978c99fd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.sub2",
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05baaf87cbdf8757e",
            "route_table_id": "rtb-02edbf94d3d83eff0",
            "subnet_id": "subnet-00713f5745f1981f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.sub3",
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:security-group/sg-0637474f1edc34eaa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0637474f1edc34eaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "339712741355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:subnet/subnet-0304f15ab82427b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0304f15ab82427b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712741355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub1"
            },
            "tags_all": {
              "Name": "sub1"
            },
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "dependencies": [
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:subnet/subnet-07a512c50978c99fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a512c50978c99fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712741355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub2"
            },
            "tags_all": {
              "Name": "sub2"
            },
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "dependencies": [
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:subnet/subnet-00713f5745f1981f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00713f5745f1981f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712741355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub3"
            },
            "tags_all": {
              "Name": "sub3"
            },
            "vpc_id": "vpc-086baec78b8bac274"
          },
          "dependencies": [
            "aws_vpc.Demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712741355:vpc/vpc-086baec78b8bac274",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03a71f6e1a5a93f34",
            "default_route_table_id": "rtb-01aa2b34cf6dde2fc",
            "default_security_group_id": "sg-04e4f3c833b1be752",
            "dhcp_options_id": "dopt-089b0aed64c618522",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086baec78b8bac274",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01aa2b34cf6dde2fc",
            "owner_id": "339712741355",
            "tags": {
              "Environment": "TEST",
              "Name": "Demo"
            },
            "tags_all": {
              "Environment": "TEST",
              "Name": "Demo"
            }
          }
        }
      ]
    }
  ]
}